--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ tokio = { version = "1", features = ["full"] }
 dotenv = "0.15"
 serde = "1.0.219"
 serde_json = "1.0.140"
+chrono = "0.4.42"
+once_cell = "1.21.3"
+tokio-util = "0.7.16"
+humantime = "2.3.0"
 
 [[bin]]
 name = "CountLogger"
