--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 serenity = { version = "0.12", features = ["client", "gateway", "framework", "standard_framework", "rustls_backend"] }
 tokio = { version = "1", features = ["full"] }
+axum = "0.7"
 dotenv = "0.15"
 serde = "1.0.219"
 serde_json = "1.0.140"
