--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ chrono = "0.4.42"
 once_cell = "1.21.3"
 tokio-util = "0.7.16"
 humantime = "2.3.0"
+log = "0.4"
+env_logger = "0.11"
 
 [[bin]]
 name = "CountLogger"
