--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tokio-util = "0.7.16"
 humantime = "2.3.0"
 log = "0.4"
 env_logger = "0.11"
+sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
 
 [[bin]]
 name = "CountLogger"
